--- a/package.json
+++ b/package.json
@@ -1,22 +1,51 @@
 {
-  "name": "graphikapp",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.33",
-    "eslint": "7",
-    "eslint-config-next": "12.0.2",
-    "typescript": "4.4.4"
-  }
+    "name": "graphikapp",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^1.6.10",
+        "@emotion/react": "^11.5.0",
+        "@emotion/styled": "^11.3.0",
+        "@fontsource/archivo": "^4.5.1",
+        "@next/eslint-plugin-next": "^12.0.2",
+        "autoprefixer": "^10.4.0",
+        "eslint": "^7.15.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-typescript": "^14.0.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jest": "^24.4.0",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.4.1",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "framer-motion": "^4.1.17",
+        "next": "12.0.2",
+        "nprogress": "^0.2.0",
+        "postcss": "^8.3.11",
+        "prettier": "^2.3.2",
+        "prisma": "^3.3.0",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-toastify": "^8.0.3"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cookies": "^0.7.7",
+        "@types/cors": "^2.8.12",
+        "@types/jsonwebtoken": "^8.5.5",
+        "@types/node": "16.11.6",
+        "@types/nprogress": "^0.2.0",
+        "@types/react": "17.0.33",
+        "@typescript-eslint/eslint-plugin": "^5.3.0",
+        "@typescript-eslint/parser": "^5.3.0",
+        "eslint": "7",
+        "eslint-config-next": "12.0.2",
+        "eslint-plugin-react": "^7.26.1",
+        "typescript": "4.4.4"
+    }
 }
