--- a/.eslintrc
+++ b/.eslintrc
@@ -41,8 +41,6 @@
     "rules": {
         "no-underscore-dangle": ["error", { "allow": ["_id"] }],
         "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off",
-        "@typescript-eslint/no-unused-vars": "error",
-        "@typescript-eslint/no-explicit-any": "error"
+        "react/prop-types": "off"
     }
 }
