--- a/package.json
+++ b/package.json
@@ -46,6 +46,18 @@
         "eslint": "7",
         "eslint-config-next": "12.0.2",
         "eslint-plugin-react": "^7.26.1",
-        "typescript": "4.4.4"
+        "typescript": "4.4.4",
+        "husky": "^4.3.7",
+        "lint-staged": "^10.5.3"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "npm run lint -- --quiet --fix"
+        ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
     }
 }
