--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     },
     "extends": [
         "eslint:recommended",
+        "plugin:@next/next/recommended",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended",
@@ -35,8 +36,7 @@
         "airbnb",
         "airbnb-typescript",
         "plugin:@typescript-eslint/recommended",
-        "prettier",
-        "next/core-web-vitals"
+        "prettier"
     ],
     "rules": {
         "no-underscore-dangle": ["error", { "allow": ["_id"] }],
