--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "autoprefixer": "^10.4.0",
         "framer-motion": "^4.1.17",
         "next": "12.0.2",
+        "next-offline": "^5.0.5",
+        "next-pwa": "^5.4.0",
         "nprogress": "^0.2.0",
         "postcss": "^8.3.11",
         "prettier": "^2.3.2",
