--- a/package.json
+++ b/package.json
@@ -26,32 +26,34 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
+        "react-multi-carousel": "^2.6.5",
         "react-toastify": "^8.0.3"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/cookies": "^0.7.7",
-        "eslint": "^7.15.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-airbnb-typescript": "^14.0.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.24.2",
-        "eslint-plugin-jest": "^24.4.0",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-react-hooks": "^4.2.0",
         "@types/cors": "^2.8.12",
         "@types/jsonwebtoken": "^8.5.5",
         "@types/node": "16.11.6",
         "@types/nprogress": "^0.2.0",
         "@types/react": "17.0.33",
+        "@types/react-dom": "^17.0.11",
         "@typescript-eslint/eslint-plugin": "^5.3.0",
         "@typescript-eslint/parser": "^5.3.0",
+        "eslint": "^7.15.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-typescript": "^14.0.0",
         "eslint-config-next": "12.0.2",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jest": "^24.4.0",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-react": "^7.26.1",
-        "typescript": "4.4.4",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "husky": "^4.3.7",
-        "lint-staged": "^10.5.3"
+        "lint-staged": "^10.5.3",
+        "typescript": "4.4.4"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
