--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@emotion/styled": "^11.3.0",
         "@fontsource/archivo": "^4.5.1",
         "@next/eslint-plugin-next": "^12.0.2",
+        "@prisma/client": "^3.4.0",
         "autoprefixer": "^10.4.0",
         "axios": "^0.24.0",
         "cloudinary": "^1.27.1",
