--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "build": "next build",
         "start": "next build && next start",
         "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
-        "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'"
+        "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'",
+        "deploy": "next build && next start"
     },
     "dependencies": {
         "@chakra-ui/react": "^1.6.10",
