--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
         "@fontsource/archivo": "^4.5.1",
         "@next/eslint-plugin-next": "^12.0.2",
         "@prisma/client": "^3.4.0",
+        "@types/ua-parser-js": "^0.7.36",
         "autoprefixer": "^10.4.0",
         "axios": "^0.24.0",
         "cloudinary": "^1.27.1",
         "formidable": "^2.0.1",
         "framer-motion": "^4.1.17",
+        "joi": "^17.4.2",
         "next": "12.0.2",
         "next-offline": "^5.0.5",
         "next-pwa": "^5.4.0",
@@ -34,7 +36,8 @@
         "react-icons": "^4.3.1",
         "react-multi-carousel": "^2.6.5",
         "react-query": "^3.31.0",
-        "react-toastify": "^8.0.3"
+        "react-toastify": "^8.0.3",
+        "ua-parser-js": "^1.0.2"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
