--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,28 +6,14 @@
         "skipLibCheck": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
-        "experimentalDecorators": true,
         "noEmit": true,
         "esModuleInterop": true,
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "typeRoots": ["."],
         "isolatedModules": true,
         "jsx": "preserve",
-        "incremental": true,
-        "baseUrl": ".",
-        "paths": {
-            "@components/*": ["src/components/*"],
-            "@components": ["src/components"],
-            "@public/*": ["public/*"],
-            "@public": ["public"],
-            "@styles/*": ["src/styles/*"],
-            "@styles": ["src/styles"],
-            "@services/*": ["src/services/*"],
-            "@services": ["src/services"],
-            "@prisma": ["prisma/*"]
-        }
+        "incremental": true
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules"]
