--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "deploy": "next build && next start"
     },
     "dependencies": {
+        "@chakra-ui/icons": "^1.0.17",
         "@chakra-ui/react": "^1.6.10",
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
@@ -31,6 +32,7 @@
         "prettier": "^2.3.2",
         "prisma": "^3.3.0",
         "react": "17.0.2",
+        "react-div-100vh": "^0.6.0",
         "react-dom": "17.0.2",
         "react-error-boundary": "^3.1.4",
         "react-icons": "^4.3.1",
