--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "npx prisma generate && npm run build && next start",
         "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
         "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'",
-        "deploy": "next build && next start"
+        "deploy": "npx prisma generate && next build && next start"
     },
     "dependencies": {
         "@chakra-ui/icons": "^1.0.17",
