added : httpFetcher ( axios ) && CRUD almost ok

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
         "@types/ua-parser-js": "^0.7.36",
         "autoprefixer": "^10.4.0",
         "axios": "^0.24.0",
+        "bcrypt": "^5.0.1",
         "cloudinary": "^1.27.1",
         "formidable": "^2.0.1",
         "framer-motion": "^4.1.17",
         "joi": "^17.4.2",
+        "jsonwebtoken": "^8.5.1",
         "next": "12.0.2",
         "next-offline": "^5.0.5",
         "next-pwa": "^5.4.0",
