--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^0.24.0",
         "bcrypt": "^5.0.1",
         "cloudinary": "^1.27.1",
+        "cookies": "^0.8.0",
         "formidable": "^2.0.1",
         "framer-motion": "^4.1.17",
         "joi": "^17.4.2",
