--- a/package.json
+++ b/package.json
@@ -68,8 +68,12 @@
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
         "husky": "^4.3.7",
+        "install": "^0.13.0",
         "lint-staged": "^10.5.3",
-        "typescript": "4.4.4"
+        "npm": "^8.1.3",
+        "typescript": "4.4.4",
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "uninstall": "0.0.0"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
